--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 [dependencies]
 katex = "0.4.2"
 clap = "2.33.3"
-mdbook = "0.4.21"
+mdbook = { version = "0.4.21", default-features = false }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
